colors changed back guys

--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -47,12 +47,12 @@
                 </div>
         </div>
         <div class=row>
-                <div class=box style="background-color:black">
+                <div class=box style="background-color:violet">
                  <p class="hovercamText">  
                         Accessories
                     </p>
                 </div>
-                <div class=box style="background-color:blue">
+                <div class=box style="background-color:yellow">
                     <p class="hovercamText">  
                         Documents
                     </p>
