forms almost final

--- a/src/pages/feed/feed.html
+++ b/src/pages/feed/feed.html
@@ -38,7 +38,7 @@
      <div id="footer">
       <div class="circle_container">
         <div class="circle_box">
-            <div class="circle">
+            <div class="circle" (click)="goToHomePage()">
                 <img src="../../assets/icon/Icons/Bottom-row/products.png" class="icons">
             </div>
         </div>
@@ -48,7 +48,7 @@
     </div>
     <div class="circle_container">
         <div class="circle_box">
-            <div class="circle">
+            <div class="circle" (click)="goToFormsPage()">
                 <img src="../../assets/icon/Icons/Bottom-row/forms.png" class="icons">   
             </div>
          </div>
