--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -7,7 +7,7 @@
             <img src="../../assets/icon/Icons/Header/avi.png" id="profile">
         </div>
         <h1 id="title">
-            Products
+            <b>Products</b>
         </h1>
     </div>
     <div id="divider_box">
@@ -62,8 +62,8 @@
      <div id="footer">
         <div class="circle_container">
             <div class="circle_box">
-                <div class="circle">
-                    <img src="../../assets/icon/Icons/Bottom-row/products-dark.png " class="icons">
+                <div class="circle" (click)="goToHomePage()">
+                    <img src="../../assets/icon/Icons/Bottom-row/products.png" class="icons">
                 </div>
             </div>
             <div class="label">
@@ -72,7 +72,7 @@
         </div>
         <div class="circle_container">
             <div class="circle_box">
-                <div class="circle">
+                <div class="circle" (click)="goToFormsPage()">
                     <img src="../../assets/icon/Icons/Bottom-row/forms.png" class="icons">   
                 </div>
              </div>
