added red component

--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -59,8 +59,6 @@
                 </div>
         </div>
      </div>
-     <footer>
-    
-     </footer>
+     <red></red>
 </div>
 </ion-content>
