fixed merge conflicts and styling in feed

--- a/src/pages/feed/feed.html
+++ b/src/pages/feed/feed.html
@@ -22,12 +22,18 @@
             </div>
         </div>
         <div id="title">
+          <div class="title_rec">
             <h1 id="feedtext">
-                HoverCam Feed
+              HoverCam Feed
             </h1>
+          </div>
+          <div class="title_rec"></div>
+          <div class="title_rec"></div>
+          <div class="title_rec">
             <div id="searchbox" >
-                <img src="../../assets/icon/Icons/Menu/search.png" id="searchimage">
+              <img src="../../assets/icon/Icons/Menu/search.png" id="searchimage">
             </div>
+          </div>
         </div>
         <div id="rows">
             <div class="row">
