--- a/src/pages/forms/forms.html
+++ b/src/pages/forms/forms.html
@@ -81,7 +81,7 @@
       </div>
       <div class="circle_container">
           <div class="circle_box">
-              <div class="circle">
+              <div class="circle" (click)="goToSupportPage()">
                   <img src="../../assets/icon/Icons/Bottom-row/support.png" class="icons">
                </div>
           </div>
