--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -92,7 +92,7 @@
         </div>
         <div class="circle_container">
             <div class="circle_box">
-                <div class="circle">
+                <div class="circle" (click)="GoToSupportPage()">
                     <img src="../../assets/icon/Icons/Bottom-row/support.png" class="icons">
                  </div>
             </div>
