--- a/src/pages/feed/feed.html
+++ b/src/pages/feed/feed.html
@@ -22,18 +22,17 @@
             </div>
         </div>
         <div id="title">
-          <div class="title_rec">
+          <div class="title_rec1">
             <h1 id="feedtext">
               HoverCam Feed
             </h1>
-          </div>
-          <div class="title_rec"></div>
-          <div class="title_rec"></div>
+        </div>
           <div class="title_rec">
             <div id="searchbox" >
               <img src="../../assets/icon/Icons/Menu/search.png" id="searchimage">
             </div>
           </div>
+        
         </div>
         <div id="rows">
             <div class="row">
@@ -45,9 +44,9 @@
             <div class="row">
 
             </div>
-         </div>
          <footer>
              
          </footer>
-    </div>
+        </div>
+      </div>
 </ion-content>
