finished header templte

--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -2,7 +2,7 @@
 
 <ion-content>
   <div id="background">
-    <div id="header">
+    <!-- <div id="header">
         <div id="profilebox">
             <div id="profile_circle">
                 <img src="../../assets/icon/Icons/Header/avi.png" id="profile">
@@ -20,7 +20,10 @@
         <div id="divider">
 
         </div>
-    </div>
+    </div> -->
+    <header>
+        
+    </header>
     <div id="arrowbox">
         <img src="../../assets/icon/Icons/Header/backarrow.png" id="arrowimage">
     </div>
