--- a/src/pages/feed/feed.html
+++ b/src/pages/feed/feed.html
@@ -8,19 +8,7 @@
 
 <ion-content>
     <div id="background">
-        <div id="header">
-            <div id="profile_circle">
-                <img src="../../assets/icon/Icons/Header/avi.png" id="profile">
-            </div>
-            <h1 id="pagetitle">
-                    ChannelGram
-            </h1>
-        </div>
-        <div id="divider_box">
-            <div id="divider">
-    
-            </div>
-        </div>
+        <header></header>
         <div id="title">
           <div class="title_rec1">
             <h1 id="feedtext">
