--- a/src/pages/forms/forms.html
+++ b/src/pages/forms/forms.html
@@ -1,18 +1,6 @@
 <ion-content>
   <div id="background">
-    <div id="header">
-        <div id="profile_circle">
-            <img src="../../assets/icon/Icons/Header/avi.png" id="profile">
-        </div>
-        <h1 id="title">
-            <b>Forms</b>
-        </h1>
-    </div>
-    <div id="divider_box">
-        <div id="divider">
-
-        </div>
-    </div>
+    <header></header>
     <div id="rows">
       <div id="arrowbox">
         <img src="../../assets/icon/Icons/Header/backarrow.png" id="arrowimage">
