--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -27,7 +27,7 @@
     </div>
     <div id="rows">
         <div class=row>
-            <div class=box id="box1" style="background-color: greenyellow" (click)="gotoProductsPilotPage()">
+            <div class=box style="background-color: greenyellow" (click)="gotoProductsPilotPage()">
 
             </div>
                 <p class="hovercamText">
