some final products here

--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -27,19 +27,18 @@
     </div>
     <div id="rows">
         <div class=row>
-            <div class=box style="background-color: greenyellow" (click)="gotoProductsPilotPage()">
-
+            <div class=box style="background-color: greenyellow" (click)="goToProductsPilotPage()">
+                    <p class="hovercamText">
+                            Pilot
+                    </p>
             </div>
-                <p class="hovercamText">
-                    Pilot
-                </p>
-            </div>
+            
             <div class=box style="background-color:orange">
                 <p class="hovercamText">  
                 CenterStage
                 </p>
             </div>
-        </div>
+            </div>
         <div class=row>
                 <div class=box style="background-color:tomato">
                     <p class="hovercamText">  
@@ -67,6 +66,7 @@
                     </p>
                 </div>
         </div>
+    </div>
     <footer>
         
     </footer>
