finished headers on all pages

--- a/src/pages/feed/feed.html
+++ b/src/pages/feed/feed.html
@@ -8,8 +8,10 @@
 
 <ion-content>
     <div id="background">
-        <header></header>
-        <div id="title">
+        <header [headerTitle]="'Feed'">
+
+        </header>
+        <div id="title2">
           <div class="title_rec1">
             <h1 id="feedtext">
               HoverCam Feed
