--- a/src/pages/forms/forms.html
+++ b/src/pages/forms/forms.html
@@ -1,6 +1,8 @@
 <ion-content>
   <div id="background">
-    <header></header>
+    <header [headerTitle]="'Forms'">
+
+    </header>
     <div id="rows">
       <div id="arrowbox">
         <img src="../../assets/icon/Icons/Header/backarrow.png" id="arrowimage">
