--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -21,8 +21,8 @@
 
         </div>
     </div> -->
-    <header>
-        
+    <header [headerTitle]="'Products'">
+
     </header>
     <div id="arrowbox">
         <img src="../../assets/icon/Icons/Header/backarrow.png" id="arrowimage">
