--- a/src/pages/support/support.html
+++ b/src/pages/support/support.html
@@ -1,17 +1,9 @@
 <ion-content>
   <div id="background">
-    <div id="header">
-        <div id="profile_circle">
-            <img src="../../assets/icon/Icons/Header/avi.png" id="profile">
-        </div>
-        <h1 id="title">
-            <b>Support</b>
-        </h1>
-    </div>
-    <div id="divider_box">
-        <div id="divider">
-    </div>
-  </div>
+        <header [headerTitle]="'Support'">
+
+        </header>
+
   <div id="rows">
     <div id="arrowbox">
       <img src="../../assets/icon/Icons/Header/backarrow.png" id="arrowimage">
