--- a/src/pages/support/support.html
+++ b/src/pages/support/support.html
@@ -4,7 +4,7 @@
 
    </header>
   <div id="rows">
-    <div id="arrowbox">
+    <div id="arrowbox" (click)="goBack();">
       <img src="../../assets/icon/Icons/Header/backarrow.png" id="arrowimage">
     </div>
     <div class= "content_line2">
@@ -12,7 +12,7 @@
               
     </div>
   </div>
-  <div class= "content_line1">
+  <div class= "content_line1" (click)="goToTicketPage()">
         <div class= "line_text">
             Submit a Ticket
         </div>
