pilot function tets

--- a/src/pages/products-pilot/products-pilot.html
+++ b/src/pages/products-pilot/products-pilot.html
@@ -8,13 +8,13 @@
       </div>
     <div id="rows">
       
-        <div class="row">
+        <div class="row" (click)= "goToPilotxPage()">
             Pilot 1
         </div>
-        <div class="row">
+        <div class="row" (click)= "goToPilot3Page()">
             Pilot 3    
         </div>
-        <div class="row">
+        <div class="row" (click)= "goToPilot5Page()">
             Pilot 5
         </div>
     </div>
