--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -8,20 +8,20 @@
     </div>
     <div id="rows">
         <div class=row>
-            <div class=box style="background-color: greenyellow" (click)="goToProductsPilotPage()">
+            <div class=box style="background-color: #80A1D4" (click)="goToProductsPilotPage()">
                     <p class="hovercamText">
                             Pilot
                     </p>
             </div>
             
-            <div class=box style="background-color:orange">
+            <div class=box style="background-color:#A8C9FF">
                 <p class="hovercamText">  
                 CenterStage
                 </p>
             </div>
             </div>
         <div class=row>
-                <div class=box style="background-color:tomato">
+                <div class=box style="background-color:#B288CE">
                     <p class="hovercamText">  
                         Document
                     </p>
@@ -29,19 +29,19 @@
                         Cameras
                     </p>
                 </div>
-                <div class=box style="background-color:lightskyblue">
+                <div class=box style="background-color:#E59FF5">
                     <p class="hovercamText">  
                         Software
                      </p>
                 </div>
         </div>
         <div class=row>
-                <div class=box style="background-color:violet">
+                <div class=box style="background-color:#38E28D">
                  <p class="hovercamText">  
                         Accessories
                     </p>
                 </div>
-                <div class=box style="background-color:yellow">
+                <div class=box style="background-color:#81FFA3">
                     <p class="hovercamText">  
                         Documents
                     </p>
