fixed header msgnotif

--- a/src/pages/notifications/notifications.html
+++ b/src/pages/notifications/notifications.html
@@ -5,22 +5,28 @@
   Ionic pages and navigation.
 -->
 <ion-content>
-  <div id="background">
-      <div id="header">
-          <div id="profile_circle">
-              <img src="../../assets/icon/Icons/Header/avi.png" id="profile">
-          </div>
-          <div class="header_tab" (click)="goToMessagesPage()">
-              <p id=messages_text>
-                  Messages
-              </p>
-          </div>
-          <div class="header_tab" style="background-color:#91bbff" (click)="goToNotificationsPage()">
-              <p id=notif_text>
-                  Notifications
-              </p>
-          </div>
-      </div>
+<div id="background">
+    <div id="header">
+        <div class="profilebox">
+            <div id="profile_circle_big">
+                <img src="../../assets/icon/Icons/Header/avi.png" id="profile_big">
+            </div>
+        </div>
+        <div id="header_container">
+            <div class="header_tab" (click)="goToMessagesPage()">
+                <p id=messages_text>
+                Messages
+                </p>
+            </div>
+            <div class="header_tab" style="background-color:#91bbff" (click)="goToNotificationsPage()">
+                <p id=notif_text>
+                Notifications
+                </p>
+            </div>
+        </div>
+        <div class="profilebox">
+        </div>
+    </div>
       <div id="divider_box">
           <div id="divider">
   
