back arrow things work some cool boonk gang

--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -4,7 +4,7 @@
 
     </header>
     <div id="arrowbox">
-        <img src="../../assets/icon/Icons/Header/backarrow.png" id="arrowimage">
+        <!-- <img src="../../assets/icon/Icons/Header/backarrow.png" id="arrowimage"> -->
     </div>
     <div id="rows">
         <div class=row>
