--- a/src/pages/support/support.html
+++ b/src/pages/support/support.html
@@ -6,7 +6,7 @@
 
   <div id="rows">
     <div id="arrowbox" (click)="goBack();">
-      <img src="../../assets/icon/Icons/Header/backarrow.png" id="arrowimage">
+      <!-- <img src="../../assets/icon/Icons/Header/backarrow.png" id="arrowimage"> -->
     </div>
     <div class= "content_line2">
       <div class= "line_text">
