--- a/src/pages/messages/messages.html
+++ b/src/pages/messages/messages.html
@@ -1,17 +1,74 @@
-<!--
-  Generated template for the MessagesPage page.
-
-  See http://ionicframework.com/docs/components/#navigation for more info on
-  Ionic pages and navigation.
--->
 <ion-content>
 <div id="background">
     <div id="header">
         <div class="profilebox">
             <div id="profile_circle_big">
-                <img src="../../assets/icon/Icons/Header/avi.png" id="profile_big">
+                <img src="../../assets/icon/Icons/Menu/avi-large.png" id="profile_big" (click)="toggleMenu()">
             </div>
         </div>
+        <div id="mySidenav" class="sidenav">
+                <div id= "sidenav_header">
+                    <div id= "sidenav_profilebox">
+                                <img src= "../../assets/icon/Icons/Menu/avi-large.png" id= "sidenav_profile" (click)="toggleMenu()">
+                    </div>
+                    <div id= "sidenav_name">
+                        <div id= "sidenav_name_name">
+                            Branricarl
+                        </div>
+                        <div id= "sidenav_name_company">
+                            Pathway Innovations and Technologies, inc.
+                        </div>
+                    </div>    
+                </div>
+                <div id="divider_box">
+                        <div id="divider">
+                            
+                        </div>
+                </div>
+                <div id= "sidenav_body">
+                    <div class= "sidenav_row">
+                        <div class= "sidenav_row_content">
+                            <div class= "sidenav_row_picturebox">
+                                <img src= "../../assets/icon/Icons/Menu/avi-small.png" class= "sidenav_row_picture">
+                            </div>
+                            <div class= "sidenav_row_text">
+                                Profile
+                            </div>
+                        </div>
+                    </div>
+                    <div class= "sidenav_row">
+                        <div class= "sidenav_row_content">
+                            <div class= "sidenav_row_picturebox">
+                                <img src= "../../assets/icon/Icons/Menu/messages.png" class= "sidenav_row_picture">
+                            </div>
+                            <div class= "sidenav_row_text">
+                                Messages
+                            </div>
+                        </div>
+                    </div>
+                    <div class= "sidenav_row">
+                        <div class= "sidenav_row_content">
+                            <div class= "sidenav_row_picturebox">
+                                <img src= "../../assets/icon/Icons/Home/search.png" class= "sidenav_row_picture">
+                            </div>
+                            <div class= "sidenav_row_text">
+                                Search
+                            </div>
+                        </div>
+                    </div>
+                    <div class= "sidenav_row">
+                        <div class= "sidenav_row_content">
+                            <div class= "sidenav_row_picturebox">
+                                <img src= "../../assets/icon/Icons/Menu/pricing.png" class= "sidenav_row_picture">
+                            </div>
+                            <div class= "sidenav_row_text">
+                                Pricing
+                            </div>
+                        </div>
+                    </div>  
+                </div>
+            </div>
+            
         <div id="header_container">
             <div class="header_tab" style="background-color:#91bbff" (click)="goToMessagesPage()">
                 <p id=messages_text>
@@ -33,7 +90,7 @@
         </div>
     </div>
     <div id="arrowbox">
-        <img src="../../assets/icon/Icons/Header/backarrow.png" id="arrowimage">
+        <!-- <img src="../../assets/icon/Icons/Header/backarrow.png" id="arrowimage"> -->
     </div>
     <div id="rows_container">
         <scroll-item [supportTitle]="'Ticket'" [supportBody]="'My beans spilled'">
