--- a/src/pages/products-pilot/products-pilot.html
+++ b/src/pages/products-pilot/products-pilot.html
@@ -3,7 +3,7 @@
     <header [headerTitle]="'Pilot'">
 
     </header>
-    <div id="arrowbox">
+    <div id="arrowbox" (click)= "goBack()">
         <img src="../../assets/icon/Icons/Header/backarrow.png" id="arrowimage">
       </div>
     <div id="rows">
