--- a/src/pages/feed/feed.html
+++ b/src/pages/feed/feed.html
@@ -35,7 +35,7 @@
 
             </div>
         </div>
-        <footer>
+        <footer [currentPage]='page'>
              
         </footer>
       </div>
