--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -48,7 +48,7 @@
                 </div>
         </div>
     </div>
-    <footer>
+    <footer [currentPage]='page'>
         
     </footer>
 </div>
