--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -48,8 +48,8 @@
                 </div>
         </div>
     </div>
-    <footer>
+    <footer [currentPage]="page">
         
     </footer>
 </div>
-</ion-content>
+</ion-content>+
