--- a/src/pages/ticket/ticket.html
+++ b/src/pages/ticket/ticket.html
@@ -21,7 +21,8 @@
       </ion-item>
       </ion-list>
       <textarea placeholder= "enter a description"id= "descriptionBox"></textarea>
-      <input type="file" accept="video/*" value="Submit a Video">
+      <input type="file" accept="video/*" name="file" id="file" class="buttonfile">
+      <label for="file">Upload a Video</label>
     </div>
     <footer>
         
