--- a/src/pages/notifications/notifications.html
+++ b/src/pages/notifications/notifications.html
@@ -102,7 +102,7 @@
   
           </scroll-item></b> -->
   
-          <scroll-item *ngFor="let message of listOfNotifs1" [supportBody]="notif.Type">
+          <scroll-item *ngFor="let notification of listOfNotifs1" [supportTitle]="notification.Type + ' ' " [supportTitle2]="notification.Action">
           </scroll-item>
   
       </div>
