--- a/src/pages/notifications/notifications.html
+++ b/src/pages/notifications/notifications.html
@@ -106,7 +106,7 @@
           </scroll-item>
   
       </div>
-       <footer></footer>
+       <footer [currentPage]='page'></footer>
   </div>
   
   </ion-content>
