--- a/src/pages/support/support.html
+++ b/src/pages/support/support.html
@@ -20,12 +20,12 @@
   </div>
   <div class= "content_line1">
         <div class= "line_text">
-            View Registration
+            View Status
         </div>
   </div>
   <div class= "content_line1">
         <div class= "line_text">
-            Knowledgeable
+            Knowledgebase
         </div>
   </div>
   <div class= "content_line1">
