now u can talk to travis scott

--- a/src/pages/messages/messages.html
+++ b/src/pages/messages/messages.html
@@ -97,7 +97,7 @@
 
         </scroll-item> -->
 
-        <scroll-item *ngFor="let message of listOfMessages1" [supportTitle]="message.Name" [supportBody]="message.LastMessage">
+        <scroll-item *ngFor="let message of listOfMessages1" [supportTitle]="message.Name" [supportBody]="message.LastMessage" [embeddedIn]="'messages'">
         </scroll-item>
 
     </div>
