--- a/src/pages/ticket/ticket.html
+++ b/src/pages/ticket/ticket.html
@@ -14,20 +14,17 @@
         <img src="../../assets/icon/Icons/Header/backarrow.png" id="arrowimage">
     </div>
     <div id="rows">
-      <form (ngSubmit)="sendTicket()">
+      <form [formGroup]="ticket"(ngSubmit)="sendTicket()">
       <ion-list>
       <ion-item id="subjectBox">
           <ion-label color="gray" stacked>Ticket Subject</ion-label>
-          <ion-input type="text"placeholder="Enter Text"[(ngModel)]="ticket.subject"name="subject"></ion-input>
+          <ion-input type="text"placeholder="Enter Text"name="subject"formControlName="subject"></ion-input>
           
       </ion-item>
-      <ion-item>
-        <ion-textarea placeholder= "enter a description"id= "descriptionBox" rows="10"[(ngModel)]="ticket.description"name="desscription"></ion-textarea>
-      </ion-item>
+      
       </ion-list>
-      <input type="file" accept="video/*" name="file" id="file" class="buttonfile">
-      <label for="file">Upload a Video</label>
-      <button ion-button type="submit" block>submit ticket</button>
+      <textarea id="descriptionBox" placeholder="enter a description..."formControlName="description"></textarea>
+      <button ion-button type="submit" [disabled]="!ticket.valid"block>submit ticket</button>
     </form>
     </div>
     <footer>
